updating HTML and CSS for the page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,71 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
+      <div id="0700" class="row task-info">
+        <div class="col-1 hour m-auto">7:00 AM</div>
+        <div class="col task"></div>
+        <button class="col-1 saveBtn d-flex justify-content-center align-itmes-center"><i class="mt-4 far fa-save fa-lg"></i></button>
+      </div>
+      <div id="0800" class="row task-info">
+        <div class="col-1 hour m-auto">8:00 AM</div>
+        <div class="col task"></div>
+        <button class="col-1 saveBtn d-flex justify-content-center align-itmes-center"><i class="mt-4 far fa-save fa-lg"></i></button>
+      </div>
+      <div id="0900" class="row task-info">
+        <div class="col-1 hour m-auto">9:00 AM</div>
+        <div class="col task"></div>
+        <button class="col-1 saveBtn d-flex justify-content-center align-itmes-center"><i class="mt-4 far fa-save fa-lg"></i></button>
+      </div>
+      <div id="1000" class="row task-info">
+        <div class="col-1 hour m-auto">10:00 AM</div>
+        <div class="col task"></div>
+        <button class="col-1 saveBtn d-flex justify-content-center align-itmes-center"><i class="mt-4 far fa-save fa-lg"></i></button>
+      </div>
+      <div id="1100" class="row task-info">
+        <div class="col-1 hour m-auto">11:00 AM</div>
+        <div class="col task"></div>
+        <button class="col-1 saveBtn d-flex justify-content-center align-itmes-center"><i class="mt-4 far fa-save fa-lg"></i></button>
+      </div>
+      <div id="1200" class="row task-info">
+        <div class="col-1 hour m-auto">12:00 PM</div>
+        <div class="col task"></div>
+        <button class="col-1 saveBtn d-flex justify-content-center align-itmes-center"><i class="mt-4 far fa-save fa-lg"></i></button>
+      </div>
+      <div id="1300" class="row task-info">
+        <div class="col-1 hour m-auto">1:00 PM</div>
+        <div class="col task"></div>
+        <button class="col-1 saveBtn d-flex justify-content-center align-itmes-center"><i class="mt-4 far fa-save fa-lg"></i></button>
+      </div>
+      <div id="1400" class="row task-info">
+        <div class="col-1 hour m-auto">2:00 PM</div>
+        <div class="col task"></div>
+        <button class="col-1 saveBtn d-flex justify-content-center align-itmes-center"><i class="mt-4 far fa-save fa-lg"></i></button>
+      </div>
+      <div id="1500" class="row task-info">
+        <div class="col-1 hour m-auto">3:00 PM</div>
+        <div class="col task"></div>
+        <button class="col-1 saveBtn d-flex justify-content-center align-itmes-center"><i class="mt-4 far fa-save fa-lg"></i></button>
+      </div>
+      <div id="1600" class="row task-info">
+        <div class="col-1 hour m-auto">4:00 PM</div>
+        <div class="col task"></div>
+        <button class="col-1 saveBtn d-flex justify-content-center align-itmes-center"><i class="mt-4 far fa-save fa-lg"></i></button>
+      </div>
+      <div id="1700" class="row task-info">
+        <div class="col-1 hour m-auto">5:00 PM</div>
+        <div class="col task"></div>
+        <button class="col-1 saveBtn d-flex justify-content-center align-itmes-center"><i class="mt-4 far fa-save fa-lg"></i></button>
+      </div>
+      <div id="1800" class="row task-info">
+        <div class="col-1 hour m-auto">6:00 PM</div>
+        <div class="col task"></div>
+        <button class="col-1 saveBtn d-flex justify-content-center align-itmes-center"><i class="mt-4 far fa-save fa-lg"></i></button>
+      </div>
+      <div id="1900" class="row task-info">
+        <div class="col-1 hour m-auto">7:00 PM</div>
+        <div class="col task"></div>
+        <button class="col-1 saveBtn d-flex justify-content-center align-itmes-center"><i class="mt-4 far fa-save fa-lg"></i></button>
+      </div>
       <!-- Timeblocks go here -->
     </div>
 
